--- a/templates/home.html
+++ b/templates/home.html
@@ -4,94 +4,84 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Presented by LIZH 🎶." />
+        
         <!-- 載入外部插件 start -->
-
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
         <!-- 載入外部插件 end -->
-        <title>Braslab_ZS-TTS_Demo</title>
-
+        <link href="{{url_for('static', filename='favicon.ico')}}" rel="shortcut icon">
         <style>
             body {
-                padding-top: 60px;
+                padding-top: 34px;
             }
 
             @media (min-width: 992px) {
                 body {
-                    padding-top: 60px;
+                    padding-top: 36px;
                 }
             }
         </style>
+        
+        <title>Braslab_ZS-TTS_Demo</title>
     </head>
     <body>
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-10"><img class="rounded mx-auto d-block" src="{{url_for('static', filename='Braslab2.png')}}" align="middle" style="width: 65%;" /></div>
-            </div>
-
-            <br />
-            <br />
-
-            <div class="row justify-content-center">
-                <div class="col-1">
-                    <img class="rounded mx-auto d-block" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 75%;" />
-                </div>
-                <div class="col-md-auto">
-                    <p class="h1 text-center fw-bold">👾 ZS-TTS 👾</p>
-                </div>
-                <div class="col-1">
-                    <img class="rounded mx-auto d-block" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 75%;" />
-                </div>
-            </div>
-            <br />
-            <br />
-            <!--  施工區 -->
-                        
-        </div>
-        <div class="row">
-            <div class="col align-self-start">
-                <form name="TTS_form" id="TTS_form" action="/TTS" method="post" enctype="multipart/form-data">
-                
-                    <div>
-                    
-                        <label for="formFileLg" class="form-label">CLONE FROM</label>
-                    
-                        <div class="input-group mb-3">
-                        
-                            <input type="file" class="form-control" id="TTS_clone_file" name="TTS_clone_file" />
-                        
-                            <button class="btn btn-primary fs-4 fw-bold" id="TTS-button" name="TTS-button" type="submit">TTS</button>
-                    
-                        </div>
-                
-                    </div>
-
-                
-                    <div class="mb-3">
-                    
-                        <label for="exampleFormControlTextarea1" class="form-label">TEXT</label>
-                    
-                        <input type="text" class="form-control" id="TTS_text" name="TTS_test" />
-                
-                    </div>
-            
-                </form>
-            </div>
-            <div class="col align-self-start">
-                <table class="table table-hover" id="demo_tb" name="demo_tb">
-                    <tbody></tbody>
-                </table>
-            </div>
-            <!--        -->
         
+        <div class="container">
+            <div class="row justify-content-evenly">
+                
+                <div class="col-5">
+                    
+                    <div class="row justify-content-evenly">
+                        <img class="rounded mx-auto d-block" src="{{url_for('static', filename='Braslab2.png')}}" align="middle" style="width: 100%;" />
+                    </div>
+                    
+                    <br />
+                    
+                    <div class="row justify-content-center">
+                        <div class="col-3">
+                            <img class="rounded float-end" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 30%;" />
+                        </div>
+                        <div class="col">
+                            <p class="h4 text-center fw-bold">👾 ZS-TTS 👾</p>
+                        </div>
+                        <div class="col-3">
+                            <img class="rounded float-start" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 30%;" />
+                        </div>
+                    </div>
+                    
+                    <br />
+                    
+                    <div class="row">
+                        <form name="TTS_form" id="TTS_form" action="/TTS" method="post" enctype="multipart/form-data">
+                            
+                            <label for="formFileLg" class="form-label">CLONE FROM</label>
+                            
+                            <div class="input-group">              
+                                <input type="file" class="form-control" id="TTS_clone_file" name="TTS_clone_file" />
+                                <button class="btn btn-primary fs-4 fw-bold" id="TTS-button" name="TTS-button" type="submit">TTS</button>
+                            </div>
+                            
+                            <label for="exampleFormControlTextarea1" class="form-label">TEXT</label>
+                            <input type="text" class="form-control" id="TTS_text" name="TTS_test" />
+                            
+                        </form>
+                    </div>
+                    
+                </div>
+                
+                <div class="col border border-primary" name="tts_box" id="tts_box">
+                    
+                </div>
+                
+            </div>
         </div>
 
         <script>
             // 取得表單
             let productForm = document.forms.namedItem("TTS_form");
             productForm.addEventListener("submit", function (event) {
+                
                 api_post_form(event, productForm);
             });
 
@@ -110,6 +100,17 @@
 
                 formData.append("sentence", sentence);
                 formData.append("clone_file", file);
+                
+                // 對話框先跑
+                let sentence_append = '<div class="row"><div class="col-11"><p class="fs-4 text-end">' + sentence  + '</p></div>';
+                let image_append = 
+                    '<div class="col"><img class="rounded float-start" src="{{url_for("static", filename="text.png")}}" align="middle" style="width: 110%;" /></div></div>'
+                
+                $("#tts_box").append(sentence_append + image_append);
+                $("#tts_box").append("<br \>");
+                sentence_append = ""
+                image_append =""
+                
 
                 let item = {
                     url: `/TTS`,
@@ -125,11 +126,15 @@
                     mimeType: "multipart/form-data",
                     data: formData,
                     success: function (result) {
-                        sentence_tb = '<p class="fs-4">' + sentence + "</p>";
-                        audio_tb = "<audio controls src=" + result + "></audio>";
-                        $("#demo_tb>tbody").prepend("<tr><td>" + sentence_tb + "</td><td>" + audio_tb + "</td></tr>");
-                        sentence_tb=""
-                        audio_tb=""
+                        
+                        let image_append = 
+                            '<div class="row"><div class="col"><img class="rounded float-start" src="{{url_for("static", filename="speak.png")}}" align="middle" style="width: 120%;" /></div>'
+                        let audio_append = '<div class="col-11"><audio controls src=' + result + '></audio></div></div>';
+                        
+                        $("#tts_box").append(image_append + audio_append);
+                        $("#tts_box").append("<br \>");
+                        image_append=""
+                        audio_append=""
                     },
                 };
 
