--- a/templates/home.html
+++ b/templates/home.html
@@ -40,13 +40,13 @@
                     
                     <div class="row justify-content-center">
                         <div class="col-3">
-                            <img class="rounded float-end" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 30%;" />
+                            <img class="rounded float-end" src="{{url_for('static', filename='speak.png')}}" align="middle" style="width: 30%;" />
                         </div>
                         <div class="col">
                             <p class="h4 text-center fw-bold">👾 ZS-TTS 👾</p>
                         </div>
                         <div class="col-3">
-                            <img class="rounded float-start" src="{{url_for('static', filename='catbug.gif')}}" align="middle" style="width: 30%;" />
+                            <img class="rounded float-start" src="{{url_for('static', filename='text.png')}}" align="middle" style="width: 30%;" />
                         </div>
                     </div>
                     
@@ -61,6 +61,8 @@
                                 <input type="file" class="form-control" id="TTS_clone_file" name="TTS_clone_file" />
                                 <button class="btn btn-primary fs-4 fw-bold" id="TTS-button" name="TTS-button" type="submit">TTS</button>
                             </div>
+                            
+                            <br />
                             
                             <label for="exampleFormControlTextarea1" class="form-label">TEXT</label>
                             <input type="text" class="form-control" id="TTS_text" name="TTS_test" />
